add getProduct API
